@@ -142,13 +142,11 @@ int TagManager::removeTag(Input input, Output output) {
         targetTag->insertClient(client, {}, false);
     }
 
-    // Make transferred clients visible if target tag is visible
+    // Ask target tag to make transferred clients visible if necessary
     Monitor* monitor_target = find_monitor_with_tag(targetTag);
     if (monitor_target) {
         monitor_target->applyLayout();
-        for (auto c : clients) {
-            c->set_visible(true);
-        }
+        targetTag->setVisible(true);
     }
 
     // Remove tag
